QC-53 - Converted more manual Reporting Regression cases to automated tests.

--- a/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -917,6 +917,18 @@
       <id>5adf0e74-654a-4ed3-ac04-43f84bbdd38c</id>
       <BoundTo>30a9c7d7-5a66-4200-89b0-a07375639db3</BoundTo>
     </Compile>
+    <Compile Include="SitesPage\Get_SiteID.cs">
+      <BoundTo>905595d9-a701-4d8c-a97c-fcb503e26f18</BoundTo>
+      <DependentUpon>Get_SiteID.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a1985a97-3249-4897-a416-3d49057e88d4</id>
+    </Compile>
+    <Compile Include="SitesPage\Get_SiteID.UserCode.cs">
+      <BoundTo>905595d9-a701-4d8c-a97c-fcb503e26f18</BoundTo>
+      <DependentUpon>Get_SiteID.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>e7cd9731-9b4a-484f-ba3c-d934183d3927</id>
+    </Compile>
     <Compile Include="StudiesPage\Click_AddStudy_Button.cs">
       <DependentUpon>Click_AddStudy_Button.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -1715,6 +1727,11 @@
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>30a9c7d7-5a66-4200-89b0-a07375639db3</id>
       <recordtableid>7be844f4-873c-4576-8644-e7a186898df1</recordtableid>
+    </None>
+    <None Include="SitesPage\Get_SiteID.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>905595d9-a701-4d8c-a97c-fcb503e26f18</id>
+      <recordtableid>10ec8898-271e-4894-a445-6f22a4ac47b5</recordtableid>
     </None>
     <None Include="StudiesPage\Click_AddStudy_Button.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
