--- a/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
+++ b/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
@@ -175,8 +175,32 @@
       <id>00eab69d-d320-4688-8a3c-3dd4fc3f7ba3</id>
       <BoundTo>30a4e22c-5a72-4961-bcab-768eabb47049</BoundTo>
     </Compile>
+    <Compile Include="AcademicExtract\Validate_Academic_Slicers.cs">
+      <BoundTo>de51cf08-12b5-40d2-bbe6-ea1b0b962e3f</BoundTo>
+      <DependentUpon>Validate_Academic_Slicers.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>391ea9f8-4147-4998-801b-8ac229d29e9f</id>
+    </Compile>
+    <Compile Include="AcademicExtract\Validate_Academic_Slicers.UserCode.cs">
+      <BoundTo>de51cf08-12b5-40d2-bbe6-ea1b0b962e3f</BoundTo>
+      <DependentUpon>Validate_Academic_Slicers.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6591227e-78bd-4cb0-b6f3-531a6f628674</id>
+    </Compile>
     <Compile Include="AssemblyInfo.cs">
       <id>0e137d66-06a7-4e68-8d90-fb53b8c1a1ab</id>
+    </Compile>
+    <Compile Include="Database\Validate_AcademicExtract_View.cs">
+      <BoundTo>6c8adca6-d6b7-476b-b945-f34a7fba55dc</BoundTo>
+      <DependentUpon>Validate_AcademicExtract_View.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>486aa502-b2ca-4e78-af3f-9aa2d256bc66</id>
+    </Compile>
+    <Compile Include="Database\Validate_AcademicExtract_View.UserCode.cs">
+      <BoundTo>6c8adca6-d6b7-476b-b945-f34a7fba55dc</BoundTo>
+      <DependentUpon>Validate_AcademicExtract_View.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>b3d87dab-7ba7-4e11-9a35-853044556c51</id>
     </Compile>
     <Compile Include="Database\Validate_AssessmentOutcomeCard_Entry.cs">
       <BoundTo>c6341acb-2116-4a3a-b07e-e388b0d47a17</BoundTo>
@@ -310,6 +334,18 @@
       <UserCode>true</UserCode>
       <id>04c4550f-da44-4c43-bb80-1869ea4bc8d8</id>
     </Compile>
+    <Compile Include="Database\Validate_Duplicate_Rows.cs">
+      <BoundTo>565d66ef-c96e-42a2-a554-5072f33ce812</BoundTo>
+      <DependentUpon>Validate_Duplicate_Rows.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>dabaadf4-d3bc-409b-b1a7-5300da11bce7</id>
+    </Compile>
+    <Compile Include="Database\Validate_Duplicate_Rows.UserCode.cs">
+      <BoundTo>565d66ef-c96e-42a2-a554-5072f33ce812</BoundTo>
+      <DependentUpon>Validate_Duplicate_Rows.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>4f6a6787-1b5b-4f70-bec2-9fb711e9f1ee</id>
+    </Compile>
     <Compile Include="Database\Validate_Site_Entry.cs">
       <BoundTo>911b709c-f327-4367-aeae-2a198b478d9c</BoundTo>
       <DependentUpon>Validate_Site_Entry.rxrec</DependentUpon>
@@ -321,6 +357,18 @@
       <DependentUpon>Validate_Site_Entry.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>2da892a0-f4f2-4bac-8938-ba415b300248</id>
+    </Compile>
+    <Compile Include="Database\Validate_StandardExtract_View.cs">
+      <BoundTo>e15f66fc-f36b-4f68-b3ca-23a8df6fce00</BoundTo>
+      <DependentUpon>Validate_StandardExtract_View.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9603b410-3637-4e67-b966-71316e5293e9</id>
+    </Compile>
+    <Compile Include="Database\Validate_StandardExtract_View.UserCode.cs">
+      <BoundTo>e15f66fc-f36b-4f68-b3ca-23a8df6fce00</BoundTo>
+      <DependentUpon>Validate_StandardExtract_View.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>4a07a90a-5d23-4b46-99f3-fd1ec5e88fc2</id>
     </Compile>
     <Compile Include="Database\Validate_Study_Entry.cs">
       <BoundTo>89cdb8fa-cf52-4e47-81b0-c62ef7c4e130</BoundTo>
@@ -425,8 +473,18 @@
       <id>30a4e22c-5a72-4961-bcab-768eabb47049</id>
       <recordtableid>08e3ca33-2bc0-4cba-8d44-96addaee29c6</recordtableid>
     </None>
+    <None Include="AcademicExtract\Validate_Academic_Slicers.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>de51cf08-12b5-40d2-bbe6-ea1b0b962e3f</id>
+      <recordtableid>938800c8-c8c7-48bf-a607-84b2f2991a07</recordtableid>
+    </None>
     <None Include="app.config">
       <id>329cf68b-b981-48cc-b464-e0c9bddac353</id>
+    </None>
+    <None Include="Database\Validate_AcademicExtract_View.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>6c8adca6-d6b7-476b-b945-f34a7fba55dc</id>
+      <recordtableid>9b031b36-2991-45e5-9920-2937eb519049</recordtableid>
     </None>
     <None Include="Database\Validate_AssessmentOutcomeCard_Entry.rxrec">
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
@@ -483,10 +541,20 @@
       <id>9067b4a7-ccb0-4df6-9592-d87b142e1922</id>
       <recordtableid>6ba7b7e9-f5c9-4c3b-a3f0-4ce9fbf2febb</recordtableid>
     </None>
+    <None Include="Database\Validate_Duplicate_Rows.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>565d66ef-c96e-42a2-a554-5072f33ce812</id>
+      <recordtableid>0d1372b1-a98a-44a6-91c0-188cfdc034f4</recordtableid>
+    </None>
     <None Include="Database\Validate_Site_Entry.rxrec">
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
       <id>911b709c-f327-4367-aeae-2a198b478d9c</id>
       <recordtableid>87af8760-8e28-4032-946e-4d0264c94738</recordtableid>
+    </None>
+    <None Include="Database\Validate_StandardExtract_View.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>e15f66fc-f36b-4f68-b3ca-23a8df6fce00</id>
+      <recordtableid>a848ef6f-a8d2-4a90-b8e9-3e374f4dc5dc</recordtableid>
     </None>
     <None Include="Database\Validate_Study_Entry.rxrec">
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
