QC-68: Changed the reference to the engine to dynamically select debug and release.

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -50,10 +50,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="engine">
-      <HintPath>..\..\_assets\engine\bin\Debug\engine.dll</HintPath>
+      <HintPath>..\..\_assets\engine\bin\$(Configuration)\engine.dll</HintPath>
     </Reference>
     <Reference Include="Ranorex Automation Helpers">
-      <HintPath>..\..\_assets\engine\bin\Debug\Ranorex Automation Helpers.dll</HintPath>
+      <HintPath>..\..\_assets\engine\bin\$(Configuration)\Ranorex Automation Helpers.dll</HintPath>
     </Reference>
     <Reference Include="Ranorex.Bootstrapper">
       <Private>False</Private>
