QC-67: Swagger authentication to the server API call

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2883,6 +2883,18 @@
       <UserCode>true</UserCode>
       <id>4d623283-98ab-4ab9-9c1b-ed6730fc95d9</id>
     </Compile>
+    <Compile Include="swaggerAPI.cs">
+      <BoundTo>c4d77aeb-1d90-4699-85b3-ca77c15a5d2b</BoundTo>
+      <DependentUpon>swaggerAPI.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f0836910-a3f2-4548-8c15-b8f4fa3238eb</id>
+    </Compile>
+    <Compile Include="swaggerAPI.UserCode.cs">
+      <BoundTo>c4d77aeb-1d90-4699-85b3-ca77c15a5d2b</BoundTo>
+      <DependentUpon>swaggerAPI.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c0ed3a79-a920-4fda-a695-fcd10eccd87d</id>
+    </Compile>
     <Compile Include="UsersPage\Add_Role_External_User.cs">
       <id>271a9f76-ce62-4590-ab13-f2658d41a825</id>
       <DependentUpon>Add_Role_External_User.rxrec</DependentUpon>
@@ -4676,6 +4688,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>77d10b7f-5b1f-4487-b591-57c536de0146</id>
       <recordtableid>052f590d-8129-4cde-ac98-6ee337aed7f7</recordtableid>
+    </None>
+    <None Include="swaggerAPI.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>c4d77aeb-1d90-4699-85b3-ca77c15a5d2b</id>
+      <recordtableid>13e4a129-f95e-4991-9c6b-4c0f0ad3992f</recordtableid>
     </None>
     <None Include="UsersPage\Add_Role_External_User.rxrec">
       <id>bbae9c6b-903b-4375-9555-9077f3057673</id>
