QC-47-Added (403) Forbidden error to PR regression test suite-

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1812,6 +1812,18 @@
     <Compile Include="FileLibrary.cs">
       <id>62860540-b144-44e5-b724-ed438f057100</id>
     </Compile>
+    <Compile Include="ForbidenError.cs">
+      <BoundTo>e91fde25-f7b0-439b-a9b4-b8560e3a0670</BoundTo>
+      <DependentUpon>ForbidenError.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>0b83cb39-4c1d-4025-8e46-21b9a849af1f</id>
+    </Compile>
+    <Compile Include="ForbidenError.UserCode.cs">
+      <BoundTo>e91fde25-f7b0-439b-a9b4-b8560e3a0670</BoundTo>
+      <DependentUpon>ForbidenError.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>cd2abc95-8884-44f3-9e35-6437a3ab6aab</id>
+    </Compile>
     <Compile Include="General\Clear_Gmail_Inbox.cs">
       <id>4c21ab98-d65d-435c-a355-f299e34f78f1</id>
       <BoundTo>e87673c7-f4bf-4c6e-b333-f3e04d59e47e</BoundTo>
@@ -4170,6 +4182,11 @@
       <id>782e3f8e-83fb-4420-aaa6-a2eb7731a3f6</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>0739dcfc-2397-4f24-93f3-0747bbf8fb91</recordtableid>
+    </None>
+    <None Include="ForbidenError.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>e91fde25-f7b0-439b-a9b4-b8560e3a0670</id>
+      <recordtableid>4ebd5fca-eeea-4a03-8210-c6f88b486847</recordtableid>
     </None>
     <None Include="General\Clear_Gmail_Inbox.rxrec">
       <id>e87673c7-f4bf-4c6e-b333-f3e04d59e47e</id>
