QC-76 - Added raw data and expected results for Portrait Identification

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4108,6 +4108,10 @@
       <id>bb7984a0-624e-437a-b763-367cc52e907f</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\BatteryFour.csv">
+      <id>8a6e719b-f389-440f-9065-0cb954d8c363</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\BatteryOne.csv">
       <id>fd441c63-38e6-4171-bedc-f362a5de4923</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4580,6 +4584,10 @@
     </None>
     <None Include="rawData\Baseline.txt">
       <id>d74f5749-f3c4-4764-a0cb-5edf062e3f8c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\BatteryFour.txt">
+      <id>996d2449-b98a-42e2-b097-a416ad2f3c53</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\BatteryOne.txt">
